--- a/Data Cleanup.ipynb
+++ b/Data Cleanup.ipynb
@@ -790,6 +790,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generosity[\"Averages\"]= generosity.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
