Updated WHA_Country.ipynb file and PowerPoint Presentation

--- a/WHA_Country.ipynb
+++ b/WHA_Country.ipynb
@@ -5040,7 +5040,7 @@
    "source": [
     "# Merge data sets\n",
     "\n",
-    "# merge both data sets using country code/iso_a3 as unique identifiers\n",
+    "# merge both data sets using name/Country as unique identifiers\n",
     "for_plotting = world.merge(Comp_data_df, left_on = 'name', right_on = 'Country')\n",
     "\n",
     "# check the occurrence\n",
@@ -5049,7 +5049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -5066,20 +5066,15 @@
     }
    ],
    "source": [
-    "#plot merged file. use dropna to remove any country with no revenue value\n",
-    "ax = for_plotting.dropna().plot(column='Happiness Average', cmap = 'YlGnBu', figsize=(15,10), k=3, legend = True, \n",
+    "#plot merged file.\n",
+    "\n",
+    "ax = for_plotting.plot(column='Happiness Average', cmap = 'YlGnBu', figsize=(15,10), k=3, legend = True, \n",
     "                                legend_kwds={'label': \"Happiness Score Per Country\",'orientation':\"horizontal\"},\n",
     "                                missing_kwds={'color': 'lightgrey'})\n",
     "                                \n",
-    "\n",
     "ax.set_title('World Happiness Report \\n 2015 - 2019', fontdict= {'fontsize':14})\n",
     "\n",
-    "plt.savefig(\"Images/WHR_ChoroplethMap.png\")\n",
-    "                    \n",
-    "\n",
-    "# #remove axes\n",
-    "# ax.set_axis_off()\n",
-    "# ax.get_figure()"
+    "plt.savefig(\"Images/WHR_ChoroplethMap.png\")"
    ]
   },
   {
